# dds2026

./: .env.example  .gitignore  README.md  WORKSHOP.md  presentation.excalidraw  pyproject.toml
data/: tickets.jsonl
examples/: check_ticket.py
solution/: README_STAGES.md  prompts.py  prompts_0_start.py  prompts_1_output.py  prompts_2_tools.py  prompts_3_guardrails.py  prompts_4_judge.py
tests/: conftest.py  test_guardrails.py  test_judge.py  test_output.py  test_smoke.py  test_tools.py  thresholds.py
triage/: __init__.py  agent.py  model.py  prompts.py  schema.py  tools.py
webapp/: index.html  server.py
