[project]
name = "ticket-triage-testing"
version = "0.1.0"
description = "DSS workshop: testing an agentic support-ticket triage application"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "agno>=1.1.0",
    "ollama>=0.4.0",
    "deepeval>=2.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.uv]
package = false
